include_ver_2_beta_2/freetype.h

  
  typedef unsigned int  FT_UInt;
  typedef unsigned long  FT_ULong;
  typedef signed long  FT_Fixed;
  typedef int  FT_Error;
  typedef struct  FT_Matrix_
  {
    FT_Fixed  xx, xy;
    FT_Fixed  yx, yy;
  } FT_Matrix;