lib/src/generated_bindings.dart


  /// @function:
  /// FT_Load_Char
  ///
  /// @description:
  /// Load a glyph into the glyph slot of a face object, accessed by its
  /// character code.
  ///
  /// @inout:
  /// face ::
  /// A handle to a target face object where the glyph is loaded.
  ///
  /// @input:
  /// char_code ::
  /// The glyph's character code, according to the current charmap used in
  /// the face.
  ///
  /// load_flags ::
  /// A flag indicating what to load for this glyph.  The @FT_LOAD_XXX
  /// constants can be used to control the glyph loading process (e.g.,
  /// whether the outline should be scaled, whether to load bitmaps or
  /// not, whether to hint the outline, etc).
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// This function simply calls @FT_Get_Char_Index and @FT_Load_Glyph.
  ///
  /// Many fonts contain glyphs that can't be loaded by this function since
  /// its glyph indices are not listed in any of the font's charmaps.
  ///
  /// If no active cmap is set up (i.e., `face->charmap` is zero), the call
  /// to @FT_Get_Char_Index is omitted, and the function behaves identically
  /// to @FT_Load_Glyph.
  int FT_Load_Char(
    FT_Face face,
    int char_code,
    int load_flags,
  ) {
    return _FT_Load_Char(
      face,
      char_code,
      load_flags,
    );
  }

  late final _FT_Load_CharPtr = _lookup<
          ffi.NativeFunction<FT_Error Function(FT_Face, FT_ULong, FT_Int32)>>(
      'FT_Load_Char');
  late final _FT_Load_Char =
      _FT_Load_CharPtr.asFunction<int Function(FT_Face, int, int)>();

  /// @function:
  /// FT_Set_Transform
  ///
  /// @description:
  /// Set the transformation that is applied to glyph images when they are
  /// loaded into a glyph slot through @FT_Load_Glyph.
  ///
  /// @inout:
  /// face ::
  /// A handle to the source face object.
  ///
  /// @input:
  /// matrix ::
  /// A pointer to the transformation's 2x2 matrix.  Use `NULL` for the
  /// identity matrix.
  /// delta ::
  /// A pointer to the translation vector.  Use `NULL` for the null
  /// vector.
  ///
  /// @note:
  /// This function is provided as a convenience, but keep in mind that
  /// @FT_Matrix coefficients are only 16.16 fixed-point values, which can
  /// limit the accuracy of the results.  Using floating-point computations
  /// to perform the transform directly in client code instead will always
  /// yield better numbers.
  ///
  /// The transformation is only applied to scalable image formats after the
  /// glyph has been loaded.  It means that hinting is unaltered by the
  /// transformation and is performed on the character size given in the
  /// last call to @FT_Set_Char_Size or @FT_Set_Pixel_Sizes.
  ///
  /// Note that this also transforms the `face.glyph.advance` field, but
  /// **not** the values in `face.glyph.metrics`.
  void FT_Set_Transform(
    FT_Face face,
    ffi.Pointer<FT_Matrix> matrix,
    ffi.Pointer<FT_Vector> delta,
  ) {
    return _FT_Set_Transform(
      face,
      matrix,
      delta,
    );
  }

  late final _FT_Set_TransformPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(FT_Face, ffi.Pointer<FT_Matrix>,
              ffi.Pointer<FT_Vector>)>>('FT_Set_Transform');
  late final _FT_Set_Transform = _FT_Set_TransformPtr.asFunction<
      void Function(FT_Face, ffi.Pointer<FT_Matrix>, ffi.Pointer<FT_Vector>)>();

  /// @function:
  /// FT_Get_Transform
  ///
  /// @description:
  /// Return the transformation that is applied to glyph images when they
  /// are loaded into a glyph slot through @FT_Load_Glyph.  See
  /// @FT_Set_Transform for more details.
  ///
  /// @input:
  /// face ::
  /// A handle to the source face object.
  ///
  /// @output:
  /// matrix ::
  /// A pointer to a transformation's 2x2 matrix.  Set this to NULL if you
  /// are not interested in the value.
  ///
  /// delta ::
  /// A pointer to a translation vector.  Set this to NULL if you are not
  /// interested in the value.
  ///
  /// @since:
  /// 2.11
  void FT_Get_Transform(
    FT_Face face,
    ffi.Pointer<FT_Matrix> matrix,
    ffi.Pointer<FT_Vector> delta,
  ) {
    return _FT_Get_Transform(
      face,
      matrix,
      delta,
    );
  }

  late final _FT_Get_TransformPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(FT_Face, ffi.Pointer<FT_Matrix>,
              ffi.Pointer<FT_Vector>)>>('FT_Get_Transform');
  late final _FT_Get_Transform = _FT_Get_TransformPtr.asFunction<
      void Function(FT_Face, ffi.Pointer<FT_Matrix>, ffi.Pointer<FT_Vector>)>();

  /// @function:
  /// FT_Render_Glyph
  ///
  /// @description:
  /// Convert a given glyph image to a bitmap.  It does so by inspecting the
  /// glyph image format, finding the relevant renderer, and invoking it.
  ///
  /// @inout:
  /// slot ::
  /// A handle to the glyph slot containing the image to convert.
  ///
  /// @input:
  /// render_mode ::
  /// The render mode used to render the glyph image into a bitmap.  See
  /// @FT_Render_Mode for a list of possible values.
  ///
  /// If @FT_RENDER_MODE_NORMAL is used, a previous call of @FT_Load_Glyph
  /// with flag @FT_LOAD_COLOR makes `FT_Render_Glyph` provide a default
  /// blending of colored glyph layers associated with the current glyph
  /// slot (provided the font contains such layers) instead of rendering
  /// the glyph slot's outline.  This is an experimental feature; see
  /// @FT_LOAD_COLOR for more information.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// When FreeType outputs a bitmap of a glyph, it really outputs an alpha
  /// coverage map.  If a pixel is completely covered by a filled-in
  /// outline, the bitmap contains 0xFF at that pixel, meaning that
  /// 0xFF/0xFF fraction of that pixel is covered, meaning the pixel is 100%
  /// black (or 0% bright).  If a pixel is only 50% covered (value 0x80),
  /// the pixel is made 50% black (50% bright or a middle shade of grey).
  /// 0% covered means 0% black (100% bright or white).
  ///
  /// On high-DPI screens like on smartphones and tablets, the pixels are so
  /// small that their chance of being completely covered and therefore
  /// completely black are fairly good.  On the low-DPI screens, however,
  /// the situation is different.  The pixels are too large for most of the
  /// details of a glyph and shades of gray are the norm rather than the
  /// exception.
  ///
  /// This is relevant because all our screens have a second problem: they
  /// are not linear.  1~+~1 is not~2.  Twice the value does not result in
  /// twice the brightness.  When a pixel is only 50% covered, the coverage
  /// map says 50% black, and this translates to a pixel value of 128 when
  /// you use 8~bits per channel (0-255).  However, this does not translate
  /// to 50% brightness for that pixel on our sRGB and gamma~2.2 screens.
  /// Due to their non-linearity, they dwell longer in the darks and only a
  /// pixel value of about 186 results in 50% brightness -- 128 ends up too
  /// dark on both bright and dark backgrounds.  The net result is that dark
  /// text looks burnt-out, pixely and blotchy on bright background, bright
  /// text too frail on dark backgrounds, and colored text on colored
  /// background (for example, red on green) seems to have dark halos or
  /// 'dirt' around it.  The situation is especially ugly for diagonal stems
  /// like in 'w' glyph shapes where the quality of FreeType's anti-aliasing
  /// depends on the correct display of grays.  On high-DPI screens where
  /// smaller, fully black pixels reign supreme, this doesn't matter, but on
  /// our low-DPI screens with all the gray shades, it does.  0% and 100%
  /// brightness are the same things in linear and non-linear space, just
  /// all the shades in-between aren't.
  ///
  /// The blending function for placing text over a background is
  ///
  /// ```
  /// dst = alpha * src + (1 - alpha) * dst    ,
  /// ```
  ///
  /// which is known as the OVER operator.
  ///
  /// To correctly composite an anti-aliased pixel of a glyph onto a
  /// surface,
  ///
  /// 1. take the foreground and background colors (e.g., in sRGB space)
  /// and apply gamma to get them in a linear space,
  ///
  /// 2. use OVER to blend the two linear colors using the glyph pixel
  /// as the alpha value (remember, the glyph bitmap is an alpha coverage
  /// bitmap), and
  ///
  /// 3. apply inverse gamma to the blended pixel and write it back to
  /// the image.
  ///
  /// Internal testing at Adobe found that a target inverse gamma of~1.8 for
  /// step~3 gives good results across a wide range of displays with an sRGB
  /// gamma curve or a similar one.
  ///
  /// This process can cost performance.  There is an approximation that
  /// does not need to know about the background color; see
  /// https://bel.fi/alankila/lcd/ and
  /// https://bel.fi/alankila/lcd/alpcor.html for details.
  ///
  /// **ATTENTION**: Linear blending is even more important when dealing
  /// with subpixel-rendered glyphs to prevent color-fringing!  A
  /// subpixel-rendered glyph must first be filtered with a filter that
  /// gives equal weight to the three color primaries and does not exceed a
  /// sum of 0x100, see section @lcd_rendering.  Then the only difference to
  /// gray linear blending is that subpixel-rendered linear blending is done
  /// 3~times per pixel: red foreground subpixel to red background subpixel
  /// and so on for green and blue.
  int FT_Render_Glyph(
    FT_GlyphSlot slot,
    int render_mode,
  ) {
    return _FT_Render_Glyph(
      slot,
      render_mode,
    );
  }

  late final _FT_Render_GlyphPtr =
      _lookup<ffi.NativeFunction<FT_Error Function(FT_GlyphSlot, ffi.Int32)>>(
          'FT_Render_Glyph');
  late final _FT_Render_Glyph =
      _FT_Render_GlyphPtr.asFunction<int Function(FT_GlyphSlot, int)>();

  /// @function:
  /// FT_Get_Kerning
  ///
  /// @description:
  /// Return the kerning vector between two glyphs of the same face.
  ///
  /// @input:
  /// face ::
  /// A handle to a source face object.
  ///
  /// left_glyph ::
  /// The index of the left glyph in the kern pair.
  ///
  /// right_glyph ::
  /// The index of the right glyph in the kern pair.
  ///
  /// kern_mode ::
  /// See @FT_Kerning_Mode for more information.  Determines the scale and
  /// dimension of the returned kerning vector.
  ///
  /// @output:
  /// akerning ::
  /// The kerning vector.  This is either in font units, fractional pixels
  /// (26.6 format), or pixels for scalable formats, and in pixels for
  /// fixed-sizes formats.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// Only horizontal layouts (left-to-right & right-to-left) are supported
  /// by this method.  Other layouts, or more sophisticated kernings, are
  /// out of the scope of this API function -- they can be implemented
  /// through format-specific interfaces.
  ///
  /// Kerning for OpenType fonts implemented in a 'GPOS' table is not
  /// supported; use @FT_HAS_KERNING to find out whether a font has data
  /// that can be extracted with `FT_Get_Kerning`.
  int FT_Get_Kerning(
    FT_Face face,
    int left_glyph,
    int right_glyph,
    int kern_mode,
    ffi.Pointer<FT_Vector> akerning,
  ) {
    return _FT_Get_Kerning(
      face,
      left_glyph,
      right_glyph,
      kern_mode,
      akerning,
    );
  }

  late final _FT_Get_KerningPtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(FT_Face, FT_UInt, FT_UInt, FT_UInt,
              ffi.Pointer<FT_Vector>)>>('FT_Get_Kerning');
  late final _FT_Get_Kerning = _FT_Get_KerningPtr.asFunction<
      int Function(FT_Face, int, int, int, ffi.Pointer<FT_Vector>)>();
